raphael: overlay: Ignore RSSNR signal level
Improve reception

Signed-off-by: taran107 <hora.cooltaran@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -462,5 +462,8 @@
     <!-- Vowifi -->
     <bool name="config_hasVowifi">true</bool>
     
+    <!-- Whether device ignores the RSSNR signal implementation -->
+    <bool name="config_ignoreRssnrSignalLevel">true</bool>
+
 </resources>
 
