xtended bringup and necessary changes

--- a/overlay-aosp/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-aosp/frameworks/base/core/res/res/values/custom_config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018 AOSiP
+     Copyright (C) 2019 The LineageOS Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -12,7 +12,15 @@
      limitations under the License.
 -->
 <resources>
-    <integer name="config_deviceHardwareKeys">64</integer>
-    <bool name="config_haveHigherAspectRatioScreen">true</bool>
-    <bool name="config_multiColorBatteryLed">false</bool>
+
+    <!-- Whether device ignores the RSSNR signal implementation -->
+    <bool name="config_ignoreRssnrSignalLevel">true</bool>
+
+    <!-- Component name of the default wallpaper. This will be ImageWallpaper if not
+         specified -->
+    <string name="default_wallpaper_component" translatable="false">com.breel.wallpapers18/com.breel.wallpapers18.soundviz.wallpaper.variations.SoundVizWallpaperV2</string>
+
+    <!-- Shows the required view for in-display fingerprint -->
+    <bool name="config_supportsInDisplayFingerprint">true</bool>
+
 </resources>
