--- a/overlay-colt/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-colt/frameworks/base/core/res/res/values/custom_config.xml
@@ -22,4 +22,6 @@
     <!-- Shows the required view for in-display fingerprint -->
     <bool name="config_supportsInDisplayFingerprint">true</bool>
 
+    <!-- Whether the device has a popup camera -->
+    <bool name="config_hasPopupCamera">true</bool>
 </resources>
