raphael: Enable Vowifi Support
Signed-off-by: taran107 <hora.cooltaran@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -458,6 +458,9 @@
 
     <!-- FOD Icon Dimming -->
     <bool name="config_targetUsesInKernelDimming">false</bool>
+
+    <!-- Vowifi -->
+    <bool name="config_hasVowifi">true</bool>
     
 </resources>
 
