--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -686,4 +686,13 @@
     <!-- FOD Icon Dimming -->
     <bool name="config_targetUsesInKernelDimming">false</bool>
 
+    <!-- SystemInfo Sys Nodes -->
+    <bool name="config_deviceSupportSysInfo">true</bool>
+    <integer name="config_sysBatteryTempMultiplier">10</integer>
+    <integer name="config_sysCPUTempMultiplier">1000</integer>
+    <string name="config_sysBatteryTemp">/sys/class/power_supply/battery/temp</string>
+    <string name="config_sysCPUTemp">/sys/class/thermal/thermal_zone0/temp</string>
+    <string name="config_sysGPUFreq">/sys/kernel/gpu/gpu_clock</string>
+    <string name="config_sysGPULoad">/sys/kernel/gpu/gpu_busy</string> 
+
 </resources>
